# ai_agents

./: .gitignore  live.py
gemini_example/: realtime_conversation.py  simple.py
gemini_langchain_mcp_example/: client.py  pyproject.toml  server.py
gemini_langchain_mcp_with_ui/: client.py  custom_search_mcp_server.py  kill.sh  led_emotional_mcp_server.py  llm_server.py  local_cmd_mcp_server.py  pyproject.toml  run_llm_server.sh  run_ui.sh  search_sample.py  simple_chat.py  ui.py
gemini_mcp_example/: convert_indent.py  pyproject.toml
gemini_mcp_example/client/: client.py
gemini_mcp_example/server/: terminal_server.py
gemini_study/: live_api_starter.py
langchain/design_pattern/: passive_goal_creator.py
langchain/qa_app/: main.py
langchain/rag/: main.py
langchain/requirements_definition/: main.py
led_agent/: agent.py  agent_move.py
win_share/: app.py
win_share/templates/: index.html
