[project]
name = "gemini-langchain-mcp-with-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.54",
    "langchain-google-genai>=2.1.3",
    "langchain-mcp-adapters>=0.0.9",
    "langgraph>=0.3.31",
    "mcp>=1.6.0",
    "streamlit>=1.44.1",
]

[tool.ruff]
indent-width = 2
line-length = 120
